# spplice-cpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  DEVELOPERS.md  autobuild.sh  build_and_run.sh  builder.Dockerfile  deps.sh  docker.entrypoint.sh  globals.cpp  globals.h  main.cpp  qt5setup.sh  resources.qrc  windeps.sh  windows.cmake
resources/: icon.rc  tos.md
scripts/: CMakeLists.txt  deps-packages.sh  deps.sh  qt5setup.sh  windows.cmake
setup/: compile.sh  setup.iss
tools/: curl.cpp  curl.h  install.cpp  install.h  js.cpp  js.h  merge.cpp  merge.h  netcon.cpp  netcon.h  package.cpp  package.h  qt.cpp  qt.h  repo.cpp  repo.h  update.cpp  update.h  ws.cpp  ws.h
ui/: AddRepository.ui  ErrorDialog.ui  MainWindow.ui  PackageInfo.ui  PackageItem.ui  Repositories.ui  Settings.ui  mainwindow.h  mainwindow_extend.cpp  mainwindow_extend.h  packageitem.h
